syntax = "proto3";

package videoservice;

option go_package = "salon_be/proto";

service VideoProcessingService {
  rpc ProcessNewVideoRequest(VideoInfo) returns (ProcessNewVideoResponse) {}
}

enum ProcessState {
  PENDING = 0;
  PROCESSING = 1;
  DONE = 2;
  ERROR = 3;
  INQUEUE = 4;
}

enum ProcessResolution {
  ProcessResolution_NONE = 0;
  RESOLUTION_360P = 1;
  RESOLUTION_480P = 2;
  RESOLUTION_720P = 3;
  RESOLUTION_1080P = 4;
}

message VideoInfo {
  string video_id = 1;
  string service_id = 2;
  string description = 3;
  string uploaded_by = 4;
  string timestamp = 5;
  string s3_key = 6;
  int32 retry = 7;
  ProcessResolution request_resolution = 8;
}

message VideoProcessProgress {
  string video_id = 1;
  string service_id = 2;
  int64 timestamp = 3;
  int32 progress = 4;
  ProcessState state = 5;
  string error_msg = 6;
  ProcessResolution request_resolution = 7;
  int32 duration = 8;
}

message ProcessNewVideoResponse{
    string status = 1;
    string error_message = 2;
    int32  retry = 3;
}